# Arcade-Learning-Environment

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .valgrind-python.supp  404.html  ACKNOWLEDGMENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Copyright.txt  Justfile  LICENSES.md  MANIFEST.in  README-SDL.txt  README.md  Readme.txt  ale.cfg  common.rules  curl_tar_gz_b64.sh  download_unpack_roms.sh  env_code_review_checklist.md  index.html  libale.pc.in  makefile.cygwin  makefile.mac  makefile.unix  md5.txt  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  searchindex.js  setup.cfg  setup.py  stellarc  two_player_manuals.md  (+1 more)
examples/cpp-interface/: CMakeLists.txt  sharedLibraryInterfaceExample.cpp  sharedLibraryInterfaceWithModesExample.cpp
examples/python-rom-package/: README.md  setup.cfg
examples/python-rom-package/roms/: __init__.py
src/: CMakeLists.txt  ale_interface.cpp  ale_interface.hpp  ale_python_interface.cpp  ale_python_interface.hpp  main.cpp  module.mk  test_main.cpp  version.hpp.in
src/agents/: PlayerAgent.cpp  PlayerAgent.hpp  RandomAgent.cpp  RandomAgent.hpp  SDLKeyboardAgent.cpp  SDLKeyboardAgent.hpp  SingleActionAgent.cpp  SingleActionAgent.hpp  module.mk
src/ale/: CMakeLists.txt  ale_interface.cpp  ale_interface.hpp
src/ale/common/: CMakeLists.txt  ColourPalette.cpp  ColourPalette.hpp  Constants.cpp  Constants.h  DynamicLoad.cpp  Log.cpp  Log.hpp  Palettes.hpp  SDL2.cpp  SDL2.hpp  ScreenExporter.cpp  ScreenExporter.hpp  ScreenSDL.cpp  ScreenSDL.hpp  SoundExporter.cpp  SoundNull.cxx  SoundNull.hxx  SoundRaw.cxx  SoundRaw.hxx  SoundSDL.cxx  SoundSDL.hxx
src/ale/emucore/: Cart.cxx  Cart.hxx  Cart0840.cxx  Cart0840.hxx  Cart2K.cxx  Cart2K.hxx  Cart3E.cxx  Cart3E.hxx  Cart3F.cxx  Cart3F.hxx  Cart4A50.cxx  Cart4A50.hxx  Cart4K.cxx  Cart4K.hxx  CartAR.cxx  CartAR.hxx  CartCV.cxx  CartCV.hxx  CartDPC.cxx  CartDPC.hxx  CartE0.cxx  CartE0.hxx  CartE7.cxx  CartE7.hxx  CartF4.cxx  CartF4.hxx  CartF4SC.cxx  CartF4SC.hxx  CartF6.cxx  CartF6.hxx  CartF6SC.cxx  CartF6SC.hxx  CartF8.cxx  CartF8.hxx  CartF8SC.cxx  CartF8SC.hxx  CartFASC.cxx  CartFASC.hxx  CartFE.cxx  CartFE.hxx  (+55 more)
src/ale/environment/: ale_ram.hpp  ale_screen.hpp  ale_state.cpp  ale_state.hpp  phosphor_blend.cpp  phosphor_blend.hpp  stella_environment.cpp  stella_environment.hpp  stella_environment_wrapper.cpp  stella_environment_wrapper.hpp
src/ale/games/: RomSettings.cpp  RomSettings.hpp  RomUtils.cpp  Roms.cpp  Roms.hpp
src/ale/python/: CMakeLists.txt  __init__.py  __init__.pyi  _torch_ops.py  _xla_ops.py  ale_python_interface.cpp  ale_python_interface.hpp  ale_vector_python_interface.cpp  ale_vector_python_interface.hpp  ale_vector_xla_interface.cpp  env.py  registration.py  vector_env.py  wrappers.py
src/ale/vector/: CMakeLists.txt  action_buffer_queue.h  action_queue.hpp  array.h  async_envpool.h  async_vectorizer.hpp  atari_env.h  atari_envpool.cc  circular_buffer.h  dict.h  env.h  env_spec.h  env_vectorizer.cpp  env_vectorizer.hpp  envpool.h  preprocessed_env.cpp  preprocessed_env.hpp  py_envpool.h  result_staging.hpp  spec.h  state_buffer.h  tuple_utils.h  (+6 more)
src/common/: Array.hxx  CMakeLists.txt  ColourPalette.cpp  ColourPalette.hpp  Constants.cpp  Constants.h  Defaults.cpp  Defaults.hpp  DynamicLoad.cpp  DynamicLoad.hpp  GuiUtils.hxx  Log.cpp  Log.cxx  Log.hpp  Log.hxx  Palettes.hpp  RectList.cxx  RectList.hxx  SDL2.cpp  SDL2.hpp  ScreenExporter.cpp  ScreenExporter.hpp  ScreenSDL.cpp  ScreenSDL.hpp  SoundExporter.cpp  SoundExporter.hpp  SoundNull.cxx  SoundNull.hxx  SoundSDL.cxx  SoundSDL.hxx  Version.hxx  VideoModeList.hxx  display_screen.cpp  display_screen.h  export_screen.cpp  export_screen.h  misc_tools.h  module.mk  random_tools.h  stella.xpm
src/control/: ALEState.cpp  ALEState.hpp  fifo_controller.cpp  fifo_controller.h  game_controller.cpp  game_controller.h  internal_controller.cpp  internal_controller.h  module.mk
src/controllers/: ale_controller.cpp  ale_controller.hpp  fifo_controller.cpp  fifo_controller.hpp  internal_controller.cpp  internal_controller.hpp  module.mk  rlglue_controller.cpp  rlglue_controller.hpp
src/emucore/: AtariVox.cxx  AtariVox.hxx  Booster.cxx  Booster.hxx  CMakeLists.txt  Cart.cxx  Cart.hxx  Cart0840.cxx  Cart0840.hxx  Cart2K.cxx  Cart2K.hxx  Cart3E.cxx  Cart3E.hxx  Cart3F.cxx  Cart3F.hxx  Cart4A50.cxx  Cart4A50.hxx  Cart4K.cxx  Cart4K.hxx  CartAR.cxx  CartAR.hxx  CartCV.cxx  CartCV.hxx  CartDPC.cxx  CartDPC.hxx  CartE0.cxx  CartE0.hxx  CartE7.cxx  CartE7.hxx  CartF4.cxx  CartF4.hxx  CartF4SC.cxx  CartF4SC.hxx  CartF6.cxx  CartF6.hxx  CartF6SC.cxx  CartF6SC.hxx  CartF8.cxx  CartF8.hxx  CartF8SC.cxx  (+81 more)
src/environment/: CMakeLists.txt  ale_ram.hpp  ale_screen.hpp  ale_state.cpp  ale_state.hpp  frame_identity.hpp  frame_max.hpp  frame_processor.hpp  module.mk  phosphor_blend.cpp  phosphor_blend.hpp  stella_environment.cpp  stella_environment.hpp  stella_environment_wrapper.cpp  stella_environment_wrapper.hpp
src/games/: CMakeLists.txt  RomSettings.cpp  RomSettings.hpp  RomSettings2P.cpp  RomSettings2P.hpp  RomSettings4P.cpp  RomSettings4P.hpp  RomUtils.cpp  RomUtils.hpp  Roms.cpp  Roms.hpp  module.mk
src/gym/: CMakeLists.txt
src/os_dependent/: CMakeLists.txt  FSNodePOSIX.cxx  FSNodeWin32.cxx  OSystemUNIX.cxx  OSystemUNIX.hxx  OSystemWin32.cxx  OSystemWin32.hxx  SettingsUNIX.cxx  SettingsUNIX.hxx  SettingsWin32.cxx  SettingsWin32.hxx  module.mk
src/python/: CMakeLists.txt  __init__.py  __init__.pyi  ale_python_interface.cpp  ale_python_interface.hpp  atari_env.py  env.py  gym.py  gym_env.py  gym_registration.py  gymnasium.py  gymnasium_env.py  gymnasium_registration.py  register_gymnasium.py  registration.py
tests/: CMakeLists.txt  conftest.py  fixtures.py  requirements.txt  test_python_benchmark.py  test_python_interface.py
tests/python/: test_atari_env.py  test_atari_vector_env.py  test_atari_vector_torch.py  test_atari_vector_xla.py  test_legacy_registration.py  test_python_interface.py  test_rom_utils.py  utils.py
tests/wasm/: testing-example.html
(+1699 files in other folders)
