[build-system]
requires = [
    "scikit-build-core>=0.10",
    "nanobind>=2.1.0",
    "jax >= 0.4.31; sys_platform == 'win32' or sys_platform == 'linux'"
]
build-backend = "scikit_build_core.build"

[project]
name = "ale-py"
description = "The Arcade Learning Environment (ALE) - a platform for AI research."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
license-files = ["LICENSE.md"]
keywords = ["reinforcement-learning", "arcade-learning-environment", "atari"]
authors = [
    {name = "Marc G. Bellemare"},
    {name = "Yavar Naddaf"},
    {name = "Joel Veness"},
    {name = "Michael Bowling"},
]
maintainers = [
    {name = "Farama Foundation", email = "contact@farama.org"},
    {name = "Jesse Farebrother", email = "jfarebro@cs.mcgill.ca"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>1.20",
    "typing-extensions; python_version < '3.11'"
]
dynamic = ["version"]

[project.optional-dependencies]
vector = [
    "gymnasium>=1.1.0",
    "opencv-python>=3.0"
]
xla = [
    "gymnasium>=1.1.0",
    "opencv-python>=3.0",
    "jax >= 0.4.31; sys_platform == 'win32' or sys_platform == 'linux'",
    "chex; sys_platform == 'win32' or sys_platform == 'linux'",
]
test = [
    "pytest>=7.0",
    "gymnasium>=1.1.0",
    "opencv-python>=3.0",
    "jax >= 0.4.31; sys_platform == 'win32' or sys_platform == 'linux'",
    "chex; sys_platform == 'win32' or sys_platform == 'linux'"
]

[project.urls]
homepage = "https://github.com/Farama-Foundation/Arcade-Learning-Environment"
documentation = "https://ale.farama.org"
changelog = "https://github.com/Farama-Foundation/Arcade-Learning-Environment/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --ignore vcpkg --ignore build"
testpaths = ["tests"]
norecursedirs = ["vcpkg", "build"]

[tool.scikit-build]
cmake.args = [
    "-DSDL_SUPPORT=ON",
    "-DSDL_DYNLOAD=ON",
    "-DBUILD_CPP_LIB=OFF",
    "-DBUILD_PYTHON_LIB=ON",
    "-DBUILD_VECTOR_LIB=ON"
]
cmake.build-type = "Release"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "version.txt"
metadata.version.regex = "(?P<value>.+)"

# Enable XLA on Windows and Linux
[[tool.scikit-build.overrides]]
if.platform-system = "^(win32|linux)"
cmake.args = [
    "-DSDL_SUPPORT=ON",
    "-DSDL_DYNLOAD=ON",
    "-DBUILD_CPP_LIB=OFF",
    "-DBUILD_PYTHON_LIB=ON",
    "-DBUILD_VECTOR_LIB=ON",
    "-DBUILD_VECTOR_XLA_LIB=ON"  # add vector-xla-lib="ON"
]

[tool.cibuildwheel]
# Skip 32-bit wheels, PyPy & musllinux
skip = ["*-win32", "*i686", "*-musllinux*"]

build-frontend = "build"
manylinux-x86_64-image = "manylinux-x86_64-vcpkg:latest"
manylinux-aarch64-image = "manylinux-aarch64-vcpkg:latest"

# macOS arm64
[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { PIP_ONLY_BINARY = "numpy", VCPKG_DEFAULT_TRIPLET = "arm64-osx-mixed", VCPKG_FEATURE_FLAGS = "-compilertracking", MACOSX_DEPLOYMENT_TARGET = "13.0" }

# Windows amd64
[[tool.cibuildwheel.overrides]]
select = "*-win_amd64"
environment = { PIP_ONLY_BINARY = "numpy", VCPKG_DEFAULT_TRIPLET = "x64-windows-mixed", VCPKG_FEATURE_FLAGS = "-compilertracking" }

# Linux x86-64
[[tool.cibuildwheel.overrides]]
select = "*-manylinux_x86_64"
environment = { PIP_ONLY_BINARY = "numpy", VCPKG_DEFAULT_TRIPLET = "x64-linux-mixed", VCPKG_FEATURE_FLAGS = "-compilertracking" }

# Linux ARM64
[[tool.cibuildwheel.overrides]]
select = "*-manylinux_aarch64"
environment = { PIP_ONLY_BINARY = "numpy", VCPKG_DEFAULT_TRIPLET = "arm64-linux-mixed", VCPKG_FEATURE_FLAGS = "-compilertracking" }
