[metadata]
license = GPLv2
license_file = LICENSE.md
name = ale-py
author = Arcade Learning Environment Authors
maintainer = Jesse Farebrother
maintainer_email = jfarebro@cs.ualberta.ca
description = The Arcade Learning Environment (ALE) - a platform for AI research.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://arcadelearningenvironment.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = reinforcement-learning arcade-learning-environment atari
project_urls =
    Documentation = https://arcadelearningenvironment.org
    Source = https://github.com/mgbellemare/Arcade-Learning-Environment
    Tracker = https://github.com/mgbellemare/Arcade-Learning-Environment/issues

[options]
python_requires = >=3.6
zip_safe = False
install_requires =
    numpy
tests_require =
    pytest
