[metadata]
license = GPLv2
license_file = LICENSE.md
name = ale-py
author = Arcade Learning Environment Authors
maintainer = Jesse Farebrother
maintainer_email = jfarebro@cs.ualberta.ca
description = The Arcade Learning Environment (ALE) - a platform for AI research.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://arcadelearningenvironment.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = reinforcement-learning arcade-learning-environment atari
project_urls =
    Documentation = https://arcadelearningenvironment.org
    Source = https://github.com/mgbellemare/Arcade-Learning-Environment
    Tracker = https://github.com/mgbellemare/Arcade-Learning-Environment/issues

[options]
python_requires = >=3.6
zip_safe = False
packages =
    ale_py
    ale_py.roms
    ale_py.scripts
package_dir =
    ale_py = src/python
install_requires =
    numpy
    setuptools
    importlib-metadata; python_version < '3.8'
    importlib-resources
tests_require =
    pytest

[options.entry_points]
console_scripts =
  ale-import-roms = ale_py.scripts.import_roms:main
