[metadata]
name = ale-py
author = The Arcade Learning Environment Authors
maintainer = Jesse Farebrother
maintainer_email = jfarebro@cs.mcgill.ca
license = GPLv2
license_file = LICENSE.md
description = The Arcade Learning Environment (ALE) - a platform for AI research.
long_description = file: README.md CHANGELOG.md LICENSE.md
home-page = https://github.com/mgbellemare/Arcade-Learning-Environment
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = reinforcement-learning arcade-learning-environment atari
project_urls =
    Documentation = https://github.com/mgbellemare/Arcade-Learning-Environment/tree/master/docs
    Source = https://github.com/mgbellemare/Arcade-Learning-Environment
    Tracker = https://github.com/mgbellemare/Arcade-Learning-Environment/issues
    Changelog = https://github.com/mgbellemare/Arcade-Learning-Environment/blob/master/CHANGELOG.md

[options]
python_requires = >=3.7
zip_safe = False
packages =
    ale_py
    ale_py.roms
    ale_py.scripts
    gym.envs.atari
package_dir =
    ale_py = src/python
    gym = src/gym
install_requires =
    numpy
    importlib-metadata>=4.10.0; python_version < '3.10'
    importlib-resources

[options.extras_require]
test =
    pytest
    gym

[options.package_data]
ale_py.roms = *.bin

[options.entry_points]
console_scripts =
  ale-import-roms = ale_py.scripts.import_roms:main
gym.envs =
  ALE = ale_py.gym:register_gym_envs
  __internal__ = ale_py.gym:register_legacy_gym_envs
