[metadata]
name = atari57-roms
version = 1.0.0
author = Jesse Farebrother
maintainer = Jesse Farebrother
maintainer_email = jfarebro@cs.ualberta.ca
license = GPLv2
license_file = LICENSE.md
description = The Arcade Learning Environment (ALE) - a platform for AI research.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = reinforcement-learning arcade-learning-environment atari ale-py

[options]
zip_safe = True
include_package_data = True
packages =
  atari57_roms
package_dir =
  atari57_roms = roms
install_requires =
    ale-py
    importlib-resources; python < 3.8

[options.package_data]
* = *.bin

[options.entry_points]
ale-py.roms =
  atari57 = atari57_roms:atari57
